# promptbot

./: .gitignore  .promptopt.json.example  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-11-prompt-quality-overhaul.md
docs/superpowers/specs/: 2026-03-11-prompt-quality-overhaul-design.md
src/promptopt/: __init__.py  __main__.py  claude_runner.py  cli.py  config.py  optimizer.py
tests/: test_claude_runner.py  test_cli.py  test_config.py  test_optimizer.py
